# duct-tape

./: CMakeLists.txt  README.md  duct-tape.cpp  duct-tape.hpp
.github/workflows/: ci.yml
include/common/: init.hpp  shutdown.hpp  test.hpp
include/core/: engine-test.hpp  engine.hpp  event.hpp  game.hpp  input.hpp  player.hpp
include/utilities/: window-test.hpp  window.hpp
include/world/: creature.hpp  level.hpp  tile.hpp  world.hpp
src/: main.cpp
src/common/: init.cpp  shutdown.cpp  test.cpp
src/core/: engine-test.cpp  engine.cpp  input.cpp
src/utilities/: window-test.cpp  window.cpp
test/: main.cpp
test/include/: duct-tape.hpp  result.hpp  test.hpp
test/include/utilities/: window.hpp
test/src/: duct-tape.cpp  main.cpp  result.cpp  test.cpp
test/src/utilities/: window.cpp
